--- a/security1/src/main/resources/application.yml
+++ b/security1/src/main/resources/application.yml
@@ -13,11 +13,12 @@ spring:
     url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
-    
-  mvc:
-    view:
-      prefix: /templates/
-      suffix: .mustache
+
+#  의존성 설정 시 자동으로 설정되므로 생략 가능    
+#  mvc:
+#    view:
+#      prefix: /templates/
+#      suffix: .mustache
 
   jpa:
     hibernate:
